--- a/index.html
+++ b/index.html
@@ -140,13 +140,13 @@
   </section>
   <footer class="p-10 mt-20 text-center bg-gradient-to-l from-blue-300 to-blue-500 font-bold text-white">
     <div class="flex justify-center items-center gap-10 mb-4">
-      <a href="https://wa.me/628123456789" target="_blank" aria-label="WhatsApp" class="hover:opacity-75 text-white text-2xl">
+      <a href="https://wa.me/qr/PLDA3KSOLNOPP1" target="_blank" aria-label="WhatsApp" class="hover:opacity-75 text-white text-2xl">
         <i class="fab fa-whatsapp"></i>
       </a>
-      <a href="https://instagram.com/username" target="_blank" aria-label="Instagram" class="hover:opacity-75 text-white text-2xl">
+      <a href="https://www.instagram.com/trioktavian_21?igsh=MW1naHB2N3kyam9lZg==" target="_blank" aria-label="Instagram" class="hover:opacity-75 text-white text-2xl">
         <i class="fab fa-instagram"></i>
       </a>
-      <a href="https://facebook.com/username" target="_blank" aria-label="Facebook" class="hover:opacity-75 text-white text-2xl">
+      <a href="https://www.facebook.com/share/1YcUH6J6J7/" target="_blank" aria-label="Facebook" class="hover:opacity-75 text-white text-2xl">
         <i class="fab fa-facebook"></i>
       </a>
     </div>
